# boosty_downloader

./: .gitignore  Cargo.toml  Makefile.toml  README.md
core/: Cargo.toml
core/src/: checks.rs  cli.rs  comment_handler.rs  config.rs  console_logger.rs  content_items_handler.rs  download_options.rs  file_handler.rs  lib.rs  logger.rs  main.rs  menu_handler.rs  post_handler.rs  progress_reporter.rs  url_context.rs
frontend/: biome.json  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  global.css  index.css  main.tsx
frontend/src/app/: App.tsx  ThemeProvider.tsx
frontend/src/components/: Button.tsx  Checkbox.tsx  ConfigLabel.tsx  DownloadOptionsPanel.tsx  DownloadProgress.tsx  FormatLog.tsx  Header.tsx  HintIcon.tsx  Input.tsx  Label.tsx  OpenFolderButton.tsx  PageTabs.tsx  PageToggle.tsx  Switch.tsx
frontend/src/constants/: pages.ts  themes.ts  url.ts
frontend/src/hooks/: useConfig.ts  useDownloadProcess.ts  useDownloadingContent.ts  useInitApp.ts  useUrlValidation.ts  useValidateInputConfig.ts
frontend/src/pages/: ConfigPage.module.css  ConfigPage.tsx  MainPage.module.css  MainPage.tsx
frontend/src/providers/: ToasterProvider.tsx
frontend/src/types/: config.ts  downloadOptions.ts  logLevel.ts  logMessage.ts  progressMessage.ts
frontend/src/utils/: checkForLatestVersion.ts  cn.ts  compareVersions.ts  formatBytes.ts  formatEta.ts  isBlogUrl.ts  isSameBlogUrl.ts
frontend/src2/: app.rs
frontend/src2/views/: header.rs
gui/: Cargo.toml
gui/src/: app.rs  config_form.rs  config_input_handler.rs  main.rs  messages.rs  views.rs
gui/src/views/: config_screen_view.rs  config_view.rs  main_screen_view.rs  main_view.rs
scripts/: build_release.sh
src/: checks.rs  cli.rs  comment_handler.rs  config.rs  content_items_handler.rs  file_handler.rs  headers.rs  main.rs  menu_handler.rs  parser.rs  post_handler.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  state.rs  tauri_logger.rs
templates/: template.html
