[package]
name = "boosty_downloader_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
boosty_downloader_api = { path = "../boosty_downloader_api" }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs", "process"] }
anyhow = "1.0.98"
reqwest = { version = "0.12.19", features = ["stream"] }
url = "2.5.4"
indicatif = "0.17.11"
futures-util = "0.3.31"
