[package]
name = "boosty_downloader"
version = "0.9.7"
edition = "2024"

[dependencies]
boosty_api = { path = "../boosty_api" }
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "process",
] }
anyhow = "1.0.98"
chrono = "0.4.42"
reqwest = { version = "0.12.19", features = ["stream"] }
url = "2.5.4"
indicatif = "0.18.0"
futures-util = "0.3.31"
serde_json = "1.0.140"
sha2 = "0.10.9"
serde = { version = "1.0.219", features = ["derive"] }
markdown = "1.0.0"
