[package]
name = "boosty_downloader_core"
version = "0.10.4"
edition = "2024"

[lib]
name = "boosty_downloader_core"
path = "src/lib.rs"

[[bin]]
name = "boosty_downloader_cli"
path = "src/main.rs"

[dependencies]
boosty_api = { path = "../../boosty_api" }
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "process",
] }
anyhow = "1.0.100"
chrono = "0.4.42"
reqwest = { version = "0.12.19", features = ["stream"] }
url = "2.5.4"
indicatif = "0.18.0"
futures-util = "0.3.31"
serde_json = "1.0.145"
sha2 = "0.10.9"
serde = { version = "1.0.228", features = ["derive"] }
comrak = "0.46.0"
once_cell = "1.21.3"
