[package]
name = "boosty_downloader_gui"
version = "0.7.3"
description = "A Tauri App"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
boosty_api = { path = "../../boosty_api" }
boosty_downloader_core = { path = "../core" }
anyhow = "1.0.100"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-fs = "2.4.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "process",
] }
